# array_bool_2

./: CMakeLists.txt  array.h  array_bool.h  array_utils.h  bool.kdev4  main.cpp
.kdev4/: bool.kdev4
