cmake_minimum_required(VERSION 2.6)
project(bool)

add_executable(bool main.cpp)

install(TARGETS bool RUNTIME DESTINATION bin)
set(CMAKE_CXX_FLAGS "-std=c++11 -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-include-dirs -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow  -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror -Wno-unused")
